# Pedestrian-detection

./: Detect.py  Kalman.py  README.md  README_EN.md  Track.py  TrackingProgram.py  readme.md
go22_ws/devel/: .catkin  local_setup.sh
go22_ws/src/UnitreecameraSDK/: CMakeLists.txt  Face_tracking.cpp  output_file  stereo_camera_config.yaml  trans_rect_config.yaml
go22_ws/src/UnitreecameraSDK/examples/: CMakeLists.txt  example_getRectFrame.cc  example_getimagetrans.cc
go22_ws/src/dogs_voice/src/: 64bit_make.sh  Makefile  demo.c
go22_ws/src/faceLightSDK_Nano/: .main.cpp.swn  .main.cpp.swo  CMakeLists.txt  main.cpp
go22_ws/src/faceLightSDK_Nano/include/: FaceLightClient.h
go22_ws/src/unitree_legged_sdk/: CMakeLists.txt  package.xml
go22_ws/src/unitree_legged_sdk/example/: example_torque.cpp  example_velocity.cpp  example_walk.cpp
go22_ws/src/unitree_legged_sdk/include/unitree_legged_sdk/: comm.h  udp.h
